@@ -709,6 +709,20 @@ table.fp-box-top {
   width: 90%;
 }
 
+
+/* What If selection screen */
+#element-inner-wrapper-select_level_1_degrees,
+#element-inner-wrapper-select_level_2_degrees
+{
+  max-height: 300px;
+  overflow-y: scroll;
+}
+
+
+
+
+
+
 /*
 Main
 */
